# neml2-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cxx  requirements.txt
playground/: input.i  main.cxx
